--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@ footer{
 	position:static;
 	bottom:0;
 	width:100%;
-	height: 300px;
 	z-index: 1000;
 	padding: 0;
 	
@@ -42,8 +41,7 @@ footer{
 .footer_container {
 	display: flex;
 	flex-wrap: wrap;
-	width: 100%;
-	gap: 10vw;
+	justify-content: space-around;
 }
 
 .logo_footer{
@@ -59,4 +57,5 @@ footer{
 
 .footer_textbox{
 	text-align: center;
+	margin: 0 5vw 0 5vw;
 }
