--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ a, a:visited, a:hover, a:active {
     text-decoration: none; /* Om du vill ta bort understrykning */
 }
 
+
 /* NAV-BAR RELATED CODE */
 
 nav{
@@ -37,6 +38,7 @@ nav{
 	font-family: 'Baloo', sans-serif;
 	
 }
+
 
 /* FOOTER RELATED CODE */
 
@@ -72,4 +74,22 @@ footer{
 	text-align: center;
 	margin: 0 5vw 0 5vw;
 	font-family: 'Baloo2', sans-serif;
+}
+
+
+/* MENY RELATED CODE */
+
+.page_title_container{
+	margin: 15vw 10vw 15vw 10vw;
+}
+
+.meny_title_container {
+	margin-top: 15vw;
+    width: 80vw; 
+    height: 5vw; 
+    background-color: lightblue; 
+    border-radius: 20px;
+    padding: 20px; 
+    text-align: center; 
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
 }
