--- a/style.css
+++ b/style.css
@@ -5,12 +5,11 @@ body{
 	margin: 0px; /*Tar bort den vita bordern runt banner och footer*/
 	background: linear-gradient(to bottom, #899BC6, #515B74);
 	background-attachment: fixed;
-	font-family: 'Baloo', sans-serif;
 }
 
 a, a:visited, a:hover, a:active {
-    color: #F2B202;
     text-decoration: none;
+	color: #F2B202;
 }
 
 
@@ -34,10 +33,28 @@ nav{
 .navtext{
 	padding-right: 3vw;
 	display: flex;
-	color: #F2B202;
 	gap: 10px;
 }
 
+.baloo{
+	font-family: 'Baloo', sans-serif;
+}
+
+.baloo2{
+	font-family: 'Baloo2', sans-serif;
+}
+
+.yellow{
+	color: #F2B202;
+}
+
+.white{
+	color: white;
+}
+
+.bold{
+	font-weight: bold;
+}
 
 /* FOOTER RELATED CODE */
 
@@ -72,7 +89,6 @@ footer{
 .footer_textbox{
 	text-align: center;
 	margin: 0 5vw 0 5vw;
-	font-family: 'Baloo 2', sans-serif;
 }
 
 .footer_textbox h3 {
@@ -103,11 +119,12 @@ footer{
 	padding-top: 1vh;
 	height: 100vw;
 	border-radius: 5px;
+	display: flex;
+	flex-direction: column;
 }
 
 .meny_title_container {
 	padding-left: 2vw;
-	color: #F2B202;
 	margin: 0 auto;
 	width: 85vw; 
     height: 3vw; 
@@ -125,11 +142,32 @@ footer{
 	justify-content: space-between;
 }
 
+.meny_title_container_content img{
+	height: 3vw;
+	display: flex;
+}
+
 .meny_title_container_content h3{
-	height: 1.5vw;
 	font-size: 1.5vw;
 }
 
-.meny_title_container_content img{
-	height: 3vw;
+.meny_options_container{
+	display: flex;
+	justify-content: space-between;
+	padding: 0 1vw 0 1vw;
+}
+
+.meny_textbox{
+	display: flex;
+	gap: 2vw;
+	font-size: 1.5vw;
+}
+
+.meny_divider {
+	margin: 0 1vw 0 1vw;
+	width: 86vw; 
+    height: 1vw;
+    background:linear-gradient(to right,#DA3333,#741B1B);
+    border-radius: 20px;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
 }
