--- a/style.css
+++ b/style.css
@@ -22,30 +22,6 @@ ul{
 	margin: 0 0 5vw 0;
 }
 
-
-/* NAV-BAR RELATED CODE */
-
-nav{
-	background: linear-gradient(to right,#021C2D, #085B93);
-	position: fixed;
-	top: 0;
-	width: 100%;
-	z-index: 1000;
-}
-
-.banner{
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-
-}
-
-.navtext{
-	padding-right: 3vw;
-	display: flex;
-	gap: 10px;
-}
-
 .baloo{
 	font-family: 'Baloo', sans-serif;
 }
@@ -72,6 +48,37 @@ nav{
 
 .green_fade{
 	background:linear-gradient(to right,#1BBE39,#1A892E);
+}
+
+.text_size_container{
+	background-color: green;
+	position: fixed;
+	border-radius: 15%;
+	max-width: 10%;
+	margin: 5vw 0 5vw 0;
+	top: 0;
+}
+
+/* NAV-BAR RELATED CODE */
+
+nav{
+	background: linear-gradient(to right,#021C2D, #085B93);
+	position: fixed; 
+	top: 0;
+	width: 100%;
+	z-index: 1000;
+}
+
+.banner{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.navtext{
+	padding-right: 3vw;
+	display: flex;
+	gap: 10px;
 }
 
 /* FOOTER RELATED CODE */
@@ -145,6 +152,7 @@ footer{
 	display: flex;
 	flex-direction: column;
 	padding-bottom: 2vw;
+	overflow: hidden;
 }
 
 .meny_title_container {
@@ -196,8 +204,8 @@ footer{
 }
 
 .meny_divider {
-	margin: 0 1vw 0 1vw;
-	width: 86vw; 
+	margin: 0 0.5vw 0 0.5vw;
+	max-width: 100%; 
     height: 1vw;
     border-radius: 20px;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
