--- a/style.css
+++ b/style.css
@@ -164,47 +164,48 @@ footer{
 
 .page_title_container img{
 	margin: 0 auto;
-	width: 35vw;
-	height: 12vw;
+	max-width: 480px;
+	height: auto;
 }
 
 .meny_container{
 	background-color: #484F61;
-	margin: 0 6vw 0 6vw;
+	max-width: 75%;
+	margin: 0 auto;
 	height: auto;
 	border-radius: 5px;
 	display: flex;
 	flex-direction: column;
-	padding-bottom: 2vw;
+	padding:0 19.2px 15px 19.2px;
 	overflow: hidden;
 }
 
 .meny_title_container {
-	padding-left: 2vw;
+	padding-left: 15px;
 	margin: 0 auto;
 	margin-top: 1vw;
-	width: 85vw; 
-    height: 3vw; 
+	width: 99%; 
+    height: 45px; 
     border-radius: 20px;
     text-align: center; 
+	justify-content: center;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
 }
 
 .meny_title_container_content{
 	display: flex;
-	height: 3vw;
+	height: 100%;
 	text-align: center;
 	align-items: center;
 	justify-content: space-between;
 }
 
 .meny_title_container_content img{
-	height: 3vw;
-	display: flex;
+	height: 100%;
 }
 
 .meny_title_container_content h3{
-	font-size: 1.5vw;
+	font-size: 16pt;
 	text-shadow: 1px 1px 2px black;
 }
 
@@ -217,20 +218,20 @@ footer{
 .meny_textbox{
 	display: flex;
 	gap: 2vw;
-	font-size: 1.5vw;
+	font-size: 15pt;
 	text-shadow: 1px 1px 2px black;
 
 }
 
 .price_textbox{
 	text-shadow: 1px 1px 2px black;
-	font-size: 1.5vw;
+	font-size: 15pt;
 }
 
 .meny_divider {
 	margin: 0 0.5vw 0 0.5vw;
 	max-width: 100%; 
-    height: 1vw;
+    height: 10px;
     border-radius: 20px;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
 }
@@ -242,12 +243,13 @@ footer{
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
-	max-width: 75%;
+	width: 75%;
 	padding: 10px 10px 10px 10px;
 	margin: 0 auto;
 	background: linear-gradient(to bottom, #FFFFFF, #999999);
 	gap: 2vw;
 	border-radius: 1vw;
+	overflow: hidden;
 }
 
 .pictures_container img{
