--- a/style.css
+++ b/style.css
@@ -55,6 +55,10 @@ ul{
 	background:linear-gradient(to right,#1BBE39,#1A892E);
 }
 
+.text_shadow{
+	text-shadow: 1px 1px 2px black;
+}
+
 /* NAV-BAR RELATED CODE */
 
 nav{
@@ -159,7 +163,7 @@ footer{
 .page_title_container{
 	width: 100%;
 	display: flex;
-	margin: 12vw 0 5vw 0;
+	margin: 125px 0 20px 0;
 }
 
 .page_title_container img{
@@ -206,7 +210,6 @@ footer{
 
 .meny_title_container_content h3{
 	font-size: 16pt;
-	text-shadow: 1px 1px 2px black;
 }
 
 .meny_options_container{
@@ -219,12 +222,10 @@ footer{
 	display: flex;
 	gap: 2vw;
 	font-size: 15pt;
-	text-shadow: 1px 1px 2px black;
 
 }
 
 .price_textbox{
-	text-shadow: 1px 1px 2px black;
 	font-size: 15pt;
 }
 
@@ -255,5 +256,43 @@ footer{
 .pictures_container img{
 	max-width: 480px;
 	height: auto;
+	border-radius: 20px;
+}
+
+
+/* AVHÄMTNING RELATED CODE */
+
+.page_info_container{
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.info_textbox{
+	margin: 0 auto 30px auto;
+	padding: 0 10px 0 10px;
+	background-color: green;
+	max-width: 60%; 
+	height: auto;
+    border-radius: 20px;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+	text-align: center;
+}
+
+.picture_background{
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	width: 100%;
+	padding: 10px 10px 10px 10px;
+	margin: 0 auto;
+	column-gap: 250px;
+	row-gap: 20px;
+	border-radius: 1vw;
+	overflow: hidden;
+}
+
+.avhämtning_picture_container img{
+	width: 480px;
+	height: 360px;
 	border-radius: 20px;
 }
