--- a/style.css
+++ b/style.css
@@ -27,6 +27,12 @@ ul{
 	margin: 0 0 5vw 0;
 }
 
+input::placeholder{
+	top: 7px;
+	position: absolute;
+	padding-left: 5px;
+}
+
 .baloo{
 	font-family: 'Baloo', sans-serif;
 }
@@ -57,6 +63,10 @@ ul{
 
 .text_shadow{
 	text-shadow: 1px 1px 2px black;
+}
+
+.review_gray{
+	background-color: #E2E8F5;
 }
 
 /* NAV-BAR RELATED CODE */
@@ -285,8 +295,7 @@ footer{
 	width: 100%;
 	padding: 10px 10px 10px 10px;
 	margin: 0 auto;
-	column-gap: 250px;
-	row-gap: 20px;
+	gap: 20px 250px;
 	border-radius: 1vw;
 	overflow: hidden;
 }
@@ -295,4 +304,101 @@ footer{
 	width: 480px;
 	height: 360px;
 	border-radius: 20px;
+}
+
+
+/* LUNCH RELATED CODE */
+
+.lunch_container{
+	background-color: #484F61;
+	margin: 100px auto 100px auto;
+	max-width: 90%;
+	gap: 50px 45px;
+	justify-content: center;
+	height: auto;
+	border-radius: 5px;
+	display: flex;
+	flex-wrap: wrap;
+	padding: 25px 25px 25px 25px;
+	overflow: hidden;
+}
+
+.video_container{
+	width: 40%;
+	height: auto;
+}
+.video_container video{
+	width: 100%;
+	height: 100%;
+	border-radius: 10px;
+}
+
+.lunch_container iframe{
+	border-radius: 10px;
+}
+
+.lunch_textbox{
+	background-color: green;
+	width: 55%;
+	border-radius: 10px;
+	padding: 15px 15px 15px 15px;
+	font-size: 30pt;
+	text-align: center;
+}
+
+
+/* RECENSIONER RELATED CODE */
+
+.recensioner_background {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	width: 30%;
+	padding: 10px 10px 10px 10px;
+	margin: 0 auto;
+	gap: 20px 100px;
+	border-radius: 1vw;
+	overflow: hidden;
+}
+
+.username_container input {
+	border-radius: 10px;
+	border-width: 0;
+	height: 30px;
+	width: 100%;
+}
+
+.rating_container
+{
+	display: flex;
+	border-radius: 10px;
+	height: 30px;
+	align-items: center;
+}
+
+.star{
+	font-size: 24pt;
+	color: #878682;
+	cursor: pointer;
+}
+
+.star:hover{
+	color: #F2B202;
+}
+
+.star.selected{
+	color: #F2B202;
+}
+
+.review_ {
+	width: 30%;
+	margin: 0 auto;
+}
+
+.review_container input {
+	border-radius: 10px;
+	border-width: 0;
+	height: 100px;
+	width: 100%;
+	padding-left: 5px;
 }
