--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@ ul{
 input::placeholder{
 	top: 7px;
 	position: absolute;
-	padding-left: 5px;
 }
 
 .baloo{
@@ -67,6 +66,10 @@ input::placeholder{
 
 .review_gray{
 	background-color: #E2E8F5;
+}
+
+.box_shadow{
+	box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
 }
 
 /* NAV-BAR RELATED CODE */
@@ -203,7 +206,6 @@ footer{
     border-radius: 20px;
     text-align: center; 
 	justify-content: center;
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
 }
 
 .meny_title_container_content{
@@ -244,7 +246,6 @@ footer{
 	max-width: 100%; 
     height: 10px;
     border-radius: 20px;
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
 }
 
 
@@ -284,7 +285,6 @@ footer{
 	max-width: 60%; 
 	height: auto;
     border-radius: 20px;
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
 	text-align: center;
 }
 
@@ -366,6 +366,7 @@ footer{
 	border-width: 0;
 	height: 30px;
 	width: 100%;
+	padding-left: 5px;
 }
 
 .rating_container
@@ -386,19 +387,47 @@ footer{
 	color: #F2B202;
 }
 
-.star.selected{
-	color: #F2B202;
-}
-
-.review_ {
+.review_container {
 	width: 30%;
 	margin: 0 auto;
 }
 
-.review_container input {
+.review_textbox textarea {
 	border-radius: 10px;
 	border-width: 0;
 	height: 100px;
 	width: 100%;
 	padding-left: 5px;
+	resize: none;
 }
+
+.submit_container{
+	padding-left: 35vw;
+	margin-top: 10px;
+}
+
+.submit_container button{
+	border-radius: 10px;
+	border-width: 0;
+	cursor: pointer;
+	height: 30px;
+	width: 10%;
+}
+
+.placeholder_reviews_comtainer{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap:30px 150px;
+	width: 60%;
+	margin-top: 25px;
+	margin: 25px auto;
+}
+
+.placeholder_reviews_comtainer img{
+	width: 360px;
+	height: auto;
+}
+
+
+/* KONTAKTA OSS RELATED CODE */
