--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ html {
 	scroll-behavior: smooth;
 }
 
-
 body{
 	margin: 0px; /*Tar bort den vita bordern runt banner och footer*/
 	background: linear-gradient(to bottom, #899BC6, #515B74);
@@ -258,8 +257,8 @@ footer{
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
-	width: 75%;
-	padding: 10px 10px 10px 10px;
+	width: 50%;
+	padding: 5px;
 	margin: 0 auto;
 	background: linear-gradient(to bottom, #FFFFFF, #999999);
 	gap: 2vw;
@@ -268,7 +267,7 @@ footer{
 }
 
 .pictures_container img{
-	max-width: 480px;
+	max-width: 360px;
 	height: auto;
 	border-radius: 20px;
 }
@@ -582,7 +581,6 @@ footer{
 
 .home_meny_container{
 	display: flex;
-	justify-content: space-evenly;
 	margin-top: 15px;
 }
 
@@ -625,4 +623,68 @@ footer{
 .recensioner_textbox{
 	margin: 0 auto;
 	text-align: center;
+}
+
+.bildgalleri_title_container{
+	display: flex;
+	flex-direction: column;
+	background-color: #021c2d40;
+	margin-top: 50px;
+	padding: 50px 0;
+}
+
+.bildgalleri_title_container h1{
+	margin: 0 auto;
+}
+
+.bildgalleri_container {
+	margin-top: 0;
+	display: flex;
+	background-color: #021c2d40;
+	gap: 50px;
+	padding-bottom: 25px;
+}
+
+.left_container{
+	display: flex;
+	flex-direction: column;
+	width: 50%;
+	row-gap: 50px;
+	padding-left: 25px;
+}
+
+.right_container{
+	display: flex;
+	flex-direction: column;
+	width: 50%;
+	align-items: center;
+	row-gap: 50px;
+	padding-right: 25px;
+}
+
+.small_pictures_container{
+	display: flex;
+	flex-wrap: wrap;
+	gap: 50px;
+	width: 100%;
+	justify-content: center;
+	box-sizing: border-box;
+}
+
+.big_pictures_container{
+	display: flex;
+	width: 100%;	
+	box-sizing: border-box;
+}
+
+#one {
+	width: 375px;
+	height: auto;
+	border-radius: 10px;
+}
+
+#two {
+	width: 100%;
+	height: auto;
+	border-radius: 10px;
 }
