--- a/style.css
+++ b/style.css
@@ -620,7 +620,7 @@ footer{
 }
 
 .vegetarisk_container{
-	background-image: url("img/vegetarisk\ pizza.png");
+	background-image: url("img/vegetariskpizza.png");
 	background-size: cover;
 	background-repeat: no-repeat;
 	width: 50%;
