--- a/style.css
+++ b/style.css
@@ -198,6 +198,16 @@ footer{
 	color: #F2B202;
 }
 
+.arrow{
+  display: none; 
+  margin-left: 10px;
+  justify-content: center;
+}
+
+.arrow h5{
+	font-size: 14pt;
+	margin: 0;
+}
 
 /* MENY RELATED CODE */
 
@@ -274,6 +284,15 @@ footer{
 	max-width: 100%; 
     height: 10px;
     border-radius: 20px;
+}
+
+.random_pizza_container {
+	display: flex;
+	flex-direction: column;
+	background-color: #484F61;
+	width: 50%;
+	margin: 30px auto;
+	align-items: center;
 }
 
 
@@ -757,6 +776,7 @@ footer{
 .table_background_container{
 	margin-top: 100px;
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	height: 600px;
 }
@@ -769,4 +789,8 @@ footer{
 .table_container table{
 	width: 750px;
 	height: auto;
+}
+
+.js_button_container{
+	margin: 25px auto;
 }
